@@ -36,7 +36,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.25.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.9'
+    implementation 'org.springframework:spring-jdbc:6.1.10'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
